kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: money-printers
  labels:
    app: money-printers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: money-printers
  template:
    metadata:
      labels:
        app: money-printers
    spec:
      containers:
      - name: money-printers
        image: "localhost:32000/money-printers:5c1f64db"
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
          - mountPath: config.json
            name: config
            subPath: config.json
          - mountPath: application.yaml
            name: config
            subPath: application.yaml
      volumes:
        - name: config
          configMap:
            name: money-printers
