kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: money-printers
  labels:
    app: money-printers
spec:
  type: ClusterIP
  ports:
   - name: http
     port: 80
     targetPort: http
  selector:
    app: money-printers
